--- a/nginx.yml
+++ b/nginx.yml
@@ -1,6 +1,7 @@
 ---
-- name: nginx #実行するタスク名
-  hosts: localhost #対象ホスト（今回は特に指定する必要がなかったのでallとした）
-  sudo: True　#sudoするかどうか
-  roles: #タスクを記述しているディレクトリ
+- name: nginx
+  hosts: localhost
+  become: yes
+  roles:
   - role: nginx
+
