--- a/roles/nginx/templates/kumoben.conf
+++ b/roles/nginx/templates/kumoben.conf
@@ -1,6 +1,6 @@
 server {
   listen       80;
-  server_name  ;
+  server_name  {{ public_ip }};
 
   location / {
     root   /usr/share/nginx/kumoben;
